# inverse_matrix_emscripten

./: CMakeLists.txt  InverseMatrix.cpp  LICENSE  README.md
Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  inversematrix.html  inversematrix.js  inversematrix.wasm  rules.ninja
